# bedetheque_scraper

./: .gitignore  pyproject.toml
bedetheque_scraper/: file_name.py  graph_db.py  healthcheck.py  link_map.py  main.py  scraper.py  series.py
